Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39314

waitForReadyRead() do not wait for one byte on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.3.1
    • 5.3.0
    • Serial Port
    • None
    • * windows 8
      * Qt4/5
      * MSVC2012

    Description

      The waitForReadyRead() can not able to detect an one byte which has been received. Always returns timeout.

      An more info can be see here: http://qt-project.org/forums/viewreply/178169/

      Attachments

        For Gerrit Dashboard: QTBUG-39314
        # Subject Branch Project Status CR V

        Activity

          People

            kuzulis Denis Shienkov
            kuzulis Denis Shienkov
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes